compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__not_a_constructor_update.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1242
expression: "\npub type Person {\n  Person(name: String, age: Int)\n};\npub fn identity(a) { a }\npub fn update_person(person: Person) {\n  identity(..person)\n}"

---
error: Invalid record constructor
  ┌─ /src/one/two.gleam:7:3
  │
7 │   identity(..person)
  │   ^^^^^^^^ This is not a record constructor

Only record constructors can be used with the update syntax.

